Fix broken layout in 1101-1115 px.

--- a/src/sass/pages/_migration-from-app-builder.scss
+++ b/src/sass/pages/_migration-from-app-builder.scss
@@ -33,7 +33,7 @@ html body.migration-from-app-builder {
             @media screen and (max-width: 1100px) {
                 padding-top: 22px;
             }
-            width: 650px;
+            width: 635px;
         }
 
         h1 {
